# dj-music-cleanup

./: .gitignore  CHANGELOG.md  DATABASE_CONSOLIDATION_COMPLETE.md  FINAL_PROJECT_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PRODUCTION_GUIDE.md  PROJECT_ARCHITECTURE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REJECTED_FILES_GUIDE.md  check_dependencies.py  dj_music_cleanup_workflow.py  final_production_config.json  music_cleanup.py  pyproject.toml  requirements.txt  run_cleanup.bat  setup.py  test_config.json  test_tool.py
.github/workflows/: ci.yml
config/: advanced.json  default.json  development.json  metadata_first.json  production.json
core/: config.py
docs/: advanced_quality_analysis.md  installation.md  quality_scoring_system.md  reference_quality_checking.md  usage.md
examples/: advanced_quality_analysis.py  basic_usage.py  metadata_first_example.py  quality_scoring_demo.py  rejected_files_example.py
modules/: audio_quality.py  fingerprinting.py  metadata.py  organizer.py
scripts/: install.sh  migrate_database.py  test_database_schema.py  test_schema_minimal.py  test_validation.py  validate_implementation.py  validate_unified_schema.py
src/music_cleanup/: __init__.py
src/music_cleanup/audio/: __init__.py  advanced_quality_analyzer.py  defect_detection.py  duplicate_detection.py  fingerprinting.py  integrated_quality_manager.py  quality_scoring.py  reference_quality_checker.py
src/music_cleanup/cli/: __init__.py  interactive_menu.py  main.py
src/music_cleanup/core/: __init__.py  async_processor.py  batch_processor.py  chunk_manager.py  config.py  config_manager.py  constants.py  corruption_handler.py  database.py  database_migration.py  directory_manager.py  duplicate_handler.py  file_analyzer.py  orchestrator.py  orchestrator_refactored.py  pipeline_executor.py  quality_rejection_handler.py  recovery.py  rejected_handler.py  rollback.py  schema.py  streaming.py  transactions.py  unified_database.py  unified_schema.py
src/music_cleanup/metadata/: __init__.py  api_services.py  filename_parser.py  fingerprint_processor.py  metadata_manager.py  metadata_queue.py
src/music_cleanup/modules/: __init__.py  fingerprinting_streaming.py  metadata_streaming.py  organizer_atomic.py  simple_file_discovery.py  simple_file_organizer.py  simple_fingerprinter.py  simple_metadata_manager.py  simple_quality_analyzer.py
src/music_cleanup/utils/: __init__.py  analysis_converters.py  decorators.py  error_handler.py  integrity.py  progress.py  setup_directories.py  tool_checker.py
tests/: test_config_manager.py  test_package_structure.py  test_unified_database.py
tests/fixtures/: conftest.py
tests/integration/: test_cli_workflows.py
tests/unit/: test_analysis_converters.py  test_config_manager.py  test_file_analyzer.py  test_orchestrator.py
utils/: progress.py
